main/mp/parser/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'*'", "<INVALID>", "<INVALID>", "'<>'", "'<'", 
                     "'<='", "<INVALID>", "'-'", "'/'", "<INVALID>", "<INVALID>", 
                     "'='", "'>'", "'>='", "'['", "']'", "':'", "'('", "')'", 
                     "';'", "'..'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "RETURN_KEY", "BREAK_KEY", 
                      "CONTINUE_KEY", "FOR_KEY", "TO_KEY", "DOWNTO_KEY", 
                      "DO_KEY", "IF_KEY", "THEN_KEY", "ELSE_KEY", "WHILE_KEY", 
                      "WITH_KEY", "BEGIN_KEY", "END_KEY", "FUNCTION_KEY", 
                      "PROCEDURE_KEY", "VAR_KEY", "ARRAY_TYPE", "OF_KEY", 
                      "REAL_TYPE", "BOOLEAN_TYPE", "INTEGER_TYPE", "STRING_TYPE", 
                      "ADD_OP", "MUL_OP", "NOT_OP", "OR_OP", "NOTEQ_OP", 
                      "LESS_OP", "LESSEQ_OP", "INT_DIV_OP", "SUB_OP", "DIV_OP", 
                      "MOD_OP", "AND_OP", "EQ_OP", "GREAT_OP", "GREAT_EQ_OP", 
                      "L_SQUARE_SEP", "R_SQUARE_SEP", "COLON", "LB", "RB", 
                      "SEMI", "DOUBLE_DOT_SEP", "COMMA", "INT_LIT", "FLOAT_LIT", 
                      "BOOLEAN_LIT", "STRING_LIT", "WS", "COMMENT", "ID", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_mpType = 2
    RULE_idList = 3
    RULE_arrayVal = 4
    RULE_varDec = 5
    RULE_subVarDec = 6
    RULE_nullableLocal = 7
    RULE_funcdec = 8
    RULE_parDec = 9
    RULE_listPar = 10
    RULE_proceduredec = 11
    RULE_body = 12
    RULE_returnType = 13
    RULE_callStmt = 14
    RULE_listExp = 15
    RULE_expr = 16
    RULE_exprOp = 17
    RULE_expr1Op = 18
    RULE_expr2Op = 19
    RULE_expr3Op = 20
    RULE_expr4Op = 21
    RULE_stmt = 22
    RULE_indexExprLeft = 23
    RULE_assignment = 24
    RULE_ifStmt = 25
    RULE_whileStmt = 26
    RULE_forStmt = 27
    RULE_breakStmt = 28
    RULE_continueStmt = 29
    RULE_returnStmt = 30
    RULE_compoundStmt = 31
    RULE_withStmt = 32
    RULE_callExpr = 33

    ruleNames =  [ "program", "decl", "mpType", "idList", "arrayVal", "varDec", 
                   "subVarDec", "nullableLocal", "funcdec", "parDec", "listPar", 
                   "proceduredec", "body", "returnType", "callStmt", "listExp", 
                   "expr", "exprOp", "expr1Op", "expr2Op", "expr3Op", "expr4Op", 
                   "stmt", "indexExprLeft", "assignment", "ifStmt", "whileStmt", 
                   "forStmt", "breakStmt", "continueStmt", "returnStmt", 
                   "compoundStmt", "withStmt", "callExpr" ]

    EOF = Token.EOF
    T__0=1
    RETURN_KEY=2
    BREAK_KEY=3
    CONTINUE_KEY=4
    FOR_KEY=5
    TO_KEY=6
    DOWNTO_KEY=7
    DO_KEY=8
    IF_KEY=9
    THEN_KEY=10
    ELSE_KEY=11
    WHILE_KEY=12
    WITH_KEY=13
    BEGIN_KEY=14
    END_KEY=15
    FUNCTION_KEY=16
    PROCEDURE_KEY=17
    VAR_KEY=18
    ARRAY_TYPE=19
    OF_KEY=20
    REAL_TYPE=21
    BOOLEAN_TYPE=22
    INTEGER_TYPE=23
    STRING_TYPE=24
    ADD_OP=25
    MUL_OP=26
    NOT_OP=27
    OR_OP=28
    NOTEQ_OP=29
    LESS_OP=30
    LESSEQ_OP=31
    INT_DIV_OP=32
    SUB_OP=33
    DIV_OP=34
    MOD_OP=35
    AND_OP=36
    EQ_OP=37
    GREAT_OP=38
    GREAT_EQ_OP=39
    L_SQUARE_SEP=40
    R_SQUARE_SEP=41
    COLON=42
    LB=43
    RB=44
    SEMI=45
    DOUBLE_DOT_SEP=46
    COMMA=47
    INT_LIT=48
    FLOAT_LIT=49
    BOOLEAN_LIT=50
    STRING_LIT=51
    WS=52
    COMMENT=53
    ID=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56
    ERROR_CHAR=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 68
                self.decl()
                self.state = 71 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION_KEY) | (1 << MPParser.PROCEDURE_KEY) | (1 << MPParser.VAR_KEY))) != 0)):
                    break

            self.state = 73
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdec(self):
            return self.getTypedRuleContext(MPParser.FuncdecContext,0)


        def proceduredec(self):
            return self.getTypedRuleContext(MPParser.ProceduredecContext,0)


        def varDec(self):
            return self.getTypedRuleContext(MPParser.VarDecContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MPParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.FUNCTION_KEY]:
                self.state = 75
                self.funcdec()
                pass
            elif token in [MPParser.PROCEDURE_KEY]:
                self.state = 76
                self.proceduredec()
                pass
            elif token in [MPParser.VAR_KEY]:
                self.state = 77
                self.varDec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MpTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER_TYPE(self):
            return self.getToken(MPParser.INTEGER_TYPE, 0)

        def BOOLEAN_TYPE(self):
            return self.getToken(MPParser.BOOLEAN_TYPE, 0)

        def REAL_TYPE(self):
            return self.getToken(MPParser.REAL_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(MPParser.STRING_TYPE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_mpType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMpType" ):
                return visitor.visitMpType(self)
            else:
                return visitor.visitChildren(self)




    def mpType(self):

        localctx = MPParser.MpTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mpType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL_TYPE) | (1 << MPParser.BOOLEAN_TYPE) | (1 << MPParser.INTEGER_TYPE) | (1 << MPParser.STRING_TYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_idList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdList" ):
                return visitor.visitIdList(self)
            else:
                return visitor.visitChildren(self)




    def idList(self):

        localctx = MPParser.IdListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_idList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(MPParser.ID)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 83
                self.match(MPParser.COMMA)
                self.state = 84
                self.match(MPParser.ID)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayValContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY_TYPE(self):
            return self.getToken(MPParser.ARRAY_TYPE, 0)

        def L_SQUARE_SEP(self):
            return self.getToken(MPParser.L_SQUARE_SEP, 0)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.INT_LIT)
            else:
                return self.getToken(MPParser.INT_LIT, i)

        def DOUBLE_DOT_SEP(self):
            return self.getToken(MPParser.DOUBLE_DOT_SEP, 0)

        def R_SQUARE_SEP(self):
            return self.getToken(MPParser.R_SQUARE_SEP, 0)

        def OF_KEY(self):
            return self.getToken(MPParser.OF_KEY, 0)

        def mpType(self):
            return self.getTypedRuleContext(MPParser.MpTypeContext,0)


        def SUB_OP(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SUB_OP)
            else:
                return self.getToken(MPParser.SUB_OP, i)

        def getRuleIndex(self):
            return MPParser.RULE_arrayVal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayVal" ):
                return visitor.visitArrayVal(self)
            else:
                return visitor.visitChildren(self)




    def arrayVal(self):

        localctx = MPParser.ArrayValContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arrayVal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(MPParser.ARRAY_TYPE)
            self.state = 91
            self.match(MPParser.L_SQUARE_SEP)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUB_OP:
                self.state = 92
                self.match(MPParser.SUB_OP)


            self.state = 95
            self.match(MPParser.INT_LIT)
            self.state = 96
            self.match(MPParser.DOUBLE_DOT_SEP)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUB_OP:
                self.state = 97
                self.match(MPParser.SUB_OP)


            self.state = 100
            self.match(MPParser.INT_LIT)
            self.state = 101
            self.match(MPParser.R_SQUARE_SEP)
            self.state = 102
            self.match(MPParser.OF_KEY)
            self.state = 103
            self.mpType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_KEY(self):
            return self.getToken(MPParser.VAR_KEY, 0)

        def subVarDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.SubVarDecContext)
            else:
                return self.getTypedRuleContext(MPParser.SubVarDecContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_varDec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDec" ):
                return visitor.visitVarDec(self)
            else:
                return visitor.visitChildren(self)




    def varDec(self):

        localctx = MPParser.VarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(MPParser.VAR_KEY)
            self.state = 107 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 106
                self.subVarDec()
                self.state = 109 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubVarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self):
            return self.getTypedRuleContext(MPParser.IdListContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def returnType(self):
            return self.getTypedRuleContext(MPParser.ReturnTypeContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def getRuleIndex(self):
            return MPParser.RULE_subVarDec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubVarDec" ):
                return visitor.visitSubVarDec(self)
            else:
                return visitor.visitChildren(self)




    def subVarDec(self):

        localctx = MPParser.SubVarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_subVarDec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.idList()
            self.state = 112
            self.match(MPParser.COLON)
            self.state = 113
            self.returnType()
            self.state = 114
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NullableLocalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDec(self):
            return self.getTypedRuleContext(MPParser.VarDecContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_nullableLocal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNullableLocal" ):
                return visitor.visitNullableLocal(self)
            else:
                return visitor.visitChildren(self)




    def nullableLocal(self):

        localctx = MPParser.NullableLocalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_nullableLocal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR_KEY:
                self.state = 116
                self.varDec()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION_KEY(self):
            return self.getToken(MPParser.FUNCTION_KEY, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def listPar(self):
            return self.getTypedRuleContext(MPParser.ListParContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def returnType(self):
            return self.getTypedRuleContext(MPParser.ReturnTypeContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def nullableLocal(self):
            return self.getTypedRuleContext(MPParser.NullableLocalContext,0)


        def BEGIN_KEY(self):
            return self.getToken(MPParser.BEGIN_KEY, 0)

        def body(self):
            return self.getTypedRuleContext(MPParser.BodyContext,0)


        def END_KEY(self):
            return self.getToken(MPParser.END_KEY, 0)

        def getRuleIndex(self):
            return MPParser.RULE_funcdec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdec" ):
                return visitor.visitFuncdec(self)
            else:
                return visitor.visitChildren(self)




    def funcdec(self):

        localctx = MPParser.FuncdecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcdec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MPParser.FUNCTION_KEY)
            self.state = 120
            self.match(MPParser.ID)
            self.state = 121
            self.match(MPParser.LB)
            self.state = 122
            self.listPar()
            self.state = 123
            self.match(MPParser.RB)
            self.state = 124
            self.match(MPParser.COLON)
            self.state = 125
            self.returnType()
            self.state = 126
            self.match(MPParser.SEMI)
            self.state = 127
            self.nullableLocal()
            self.state = 128
            self.match(MPParser.BEGIN_KEY)
            self.state = 129
            self.body()
            self.state = 130
            self.match(MPParser.END_KEY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self):
            return self.getTypedRuleContext(MPParser.IdListContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def returnType(self):
            return self.getTypedRuleContext(MPParser.ReturnTypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_parDec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParDec" ):
                return visitor.visitParDec(self)
            else:
                return visitor.visitChildren(self)




    def parDec(self):

        localctx = MPParser.ParDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parDec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.idList()
            self.state = 133
            self.match(MPParser.COLON)
            self.state = 134
            self.returnType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListParContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ParDecContext)
            else:
                return self.getTypedRuleContext(MPParser.ParDecContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_listPar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListPar" ):
                return visitor.visitListPar(self)
            else:
                return visitor.visitChildren(self)




    def listPar(self):

        localctx = MPParser.ListParContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_listPar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 136
                self.parDec()
                self.state = 141
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 137
                        self.match(MPParser.SEMI)
                        self.state = 138
                        self.parDec() 
                    self.state = 143
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProceduredecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE_KEY(self):
            return self.getToken(MPParser.PROCEDURE_KEY, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def listPar(self):
            return self.getTypedRuleContext(MPParser.ListParContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def nullableLocal(self):
            return self.getTypedRuleContext(MPParser.NullableLocalContext,0)


        def BEGIN_KEY(self):
            return self.getToken(MPParser.BEGIN_KEY, 0)

        def body(self):
            return self.getTypedRuleContext(MPParser.BodyContext,0)


        def END_KEY(self):
            return self.getToken(MPParser.END_KEY, 0)

        def getRuleIndex(self):
            return MPParser.RULE_proceduredec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProceduredec" ):
                return visitor.visitProceduredec(self)
            else:
                return visitor.visitChildren(self)




    def proceduredec(self):

        localctx = MPParser.ProceduredecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_proceduredec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(MPParser.PROCEDURE_KEY)
            self.state = 147
            self.match(MPParser.ID)
            self.state = 148
            self.match(MPParser.LB)
            self.state = 149
            self.listPar()
            self.state = 150
            self.match(MPParser.RB)
            self.state = 151
            self.match(MPParser.SEMI)
            self.state = 152
            self.nullableLocal()
            self.state = 153
            self.match(MPParser.BEGIN_KEY)
            self.state = 154
            self.body()
            self.state = 155
            self.match(MPParser.END_KEY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
